Arrow-buffer columnar codec and native read-path resource governance
Add an Arrow-buffer-compatible columnar codec for decoded batches and
route the read path's fetch and decode buffers through byte-budgeted,
RAM-or-mmap allocators that share one disk budget.

on-behalf-of: @multiversio <info@multivers.io>